tests/paczka1/fuzzy1/34963891.err
Error in line 9: 4V9ElfH0M S805 12,3
Error in line 13: 8t3bR6x S557 48,1
Error in line 12: 4V9ElfH0M S247 52,6
Error in line 23: 4V9ElfH0M S557 34,0
Error in line 22: 2v3 S878 73,2
Error in line 24: 4V9ElfH0M S247 32,3
Error in line 32: Iuk8 S247 99,3
